# geopop

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: deploy.yml
api/: Cargo.toml  Dockerfile  Dockerfile.deploy
api/src/: auth.rs  config.rs  errors.rs  grid.rs  handlers.rs  main.rs  response.rs  validation.rs
api/src/models/: requests.rs  responses.rs
api/src/repositories/: country.rs  geocoding.rs  mod.rs  population.rs  stats.rs
api/src/routes/: analyse.rs  country.rs  exposure.rs  geocoding.rs  health.rs  mod.rs  population.rs  root.rs
docker/: Dockerfile.db  init.sql  migrate.sql  postgresql.conf
docs/: aws-deployment.md
ingestion/: download_geonames.sh  download_naturalearth.sh  download_worldpop.sh  ingest.py  ingest_geonames.py  ingest_naturalearth.py  requirements.txt
