[package]
name = "geopop-api"
version = "1.0.0"
edition = "2021"
description = "High-performance population & geocoding API backed by PostGIS"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
deadpool-postgres = "0.14"
tokio-postgres = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11"
log = "0.4"
validator = { version = "0.18", features = ["derive"] }
utoipa = { version = "5", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
